# goofy-mie443

./: README.md
common/: CMakeLists.txt  package.xml
common/include/: common.hpp
common/src/: common.cpp
contest_1/: CMakeLists.txt
contest_1/include/common/: common.hpp  visualizer.hpp
contest_1/include/mapper/: mapper.hpp  navigator.hpp
contest_1/include/planner/: primitive_planner.hpp
contest_1/include/primitives/: generator.hpp
contest_1/launch/: goofy_launch.launch  simulation_launch  system.launch
contest_1/msg/: customMsg.msg
contest_1/src/: contest1.cpp
contest_1/src/common/: common.cpp  visualizer.cpp
contest_1/src/depth/: depth.cpp
contest_1/src/mapper/: mapper.cpp  navigator.cpp
contest_1/src/planner/: primitive_planner.cpp
contest_1/src/primitives/: generator.cpp  generator_module.cpp
contest_1/src/tutorials/: tutorial1.cpp
contest_1/test/: test_common.cpp  test_mapper.cpp  test_planner.cpp
contest_2/: CMakeLists.txt
contest_2/include/: func_header.h  nav_header.h  navigation.hpp
contest_2/launch/: simulation_launch.launch  turtlebot_world.launch
contest_2/maps/: contest2_env.pgm  contest2_env.yaml  contest2_final_map.pgm  contest2_final_map.yaml  input.xml  map_1.xml  mc215.pgm  mc215.yaml
contest_2/src/: contest2.cpp  img_proc.cpp  input.xml  test_images.cpp
contest_2/src/accessory/: imageTransporter.cpp  init.cpp  my_publisher_video.cpp
contest_2/test/: test_pic_sim.cpp
contest_3/: CMakeLists.txt
contest_3/include/: PlayVideo.hpp  fsm.h  header.h
contest_3/src/: PlayVideo.cpp  contest3.cpp  fsm.cpp
contest_3/test/: test_threading.cpp
maps/default_world/: map.pgm
maps/examples/: map_for_report.pgm  map_for_report.yaml
primitive_planner/: CMakeLists.txt  package.xml
primitive_planner/src/generator/: generator.cpp  generator_module.cpp
turtlebot_follower/launch/: follower.launch
turtlebot_follower/src/: follower.cpp
